src/objects/LedgerEntryBreakout__c.object
<CustomObject>
    <fields>
        <fullName>ApplyTicketScale__c</fullName>
        <label>Apply Ticket Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RateType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Paid Tickets</fullName>
                </value>
                <value>
                    <fullName>All Drop Count</fullName>
                </value>
                <value>
                    <fullName>Selected Tickets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArtistAmountRate__c</fullName>
        <label>Artist Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ArtistAmount__c</fullName>
        <label>Artist Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistMax__c</fullName>
        <label>Artist Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistMin__c</fullName>
        <label>Artist Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistRateType__c</fullName>
        <label>Artist Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BaseAmount__c</fullName>
        <label>Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COGSAtFlash__c</fullName>
        <label>COGS at Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COGSAtSellout__c</fullName>
        <label>COGS At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COGSatForecast__c</fullName>
        <label>COGS at Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>LedgerEntry__r.Category__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContraAccount__c</fullName>
        <formula>IF(NOT(ISBLANK(LedgerEntry__r.GLAccount__r.RelatedContra__c)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contra Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContraAmount__c</fullName>
        <label>Contra Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContraAtFlash__c</fullName>
        <formula>FlashContraAmount__c + ((FlashContraPercent__c + Flash3rdPartyPercent__c) * FlashGrossRevenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contra at Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContraAtForecast__c</fullName>
        <label>Contra At Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContraPercent__c</fullName>
        <label>Contra %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContraType__c</fullName>
        <label>Contra Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contra_At_Forecast__c</fullName>
        <label>Contra % At Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContraatSellout__c</fullName>
        <label>Contra at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentFlashFormula__c</fullName>
        <formula>CASE(TEXT(FlashRateType__c),
&quot;Flat&quot;, FlashRateAmount__c,
&quot;Per Drop Count&quot;, FlashRateAmount__c * LedgerEntry__r.Event__r.ActualDropCount__c,
&quot;Per Paid Ticket&quot;, FlashRateAmount__c * LedgerEntry__r.Event__r.PaidAttendance__c,
&quot;% of Net Gross&quot;, FlashRateAmount__c / 100 * LedgerEntry__r.Event__r.SettlementNetGross__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Flash Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentFlash__c</fullName>
        <label>Current Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventAdvertisingSettlementPlan__c</fullName>
        <description>Internal field only used in Apex triggers</description>
        <formula>TEXT(LedgerEntry__r.Event__r.AdvertisingSettlementPlan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Advertising Settlement Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustment__c</fullName>
        <label>Expense Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustmentatSellout__c</fullName>
        <label>Expense Adjustment at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Unique External Id for the Ledger Entry Breakout</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flash3rdPartyPercent__c</fullName>
        <label>Flash 3rd Party %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FlashAdjustments__c</fullName>
        <formula>CurrentFlash__c - OriginalFlash__c</formula>
        <label>Flash Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashCapacityRange__c</fullName>
        <label>Flash Capacity Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlashContraAmount__c</fullName>
        <label>Flash Contra Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashContraPercent__c</fullName>
        <label>Flash Contra %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FlashGrossPerPaid__c</fullName>
        <formula>FlashGrossRevenue__c / LedgerEntry__r.Event__r.PaidAttendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Gross Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashGrossRevenue__c</fullName>
        <label>Flash Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashNetPerPaid__c</fullName>
        <formula>FlashNetRevenue__c / LedgerEntry__r.Event__r.PaidAttendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Net Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashNetRevenue__c</fullName>
        <formula>FlashGrossRevenue__c - ContraAtFlash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flash Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlashRateAmount__c</fullName>
        <label>Flash Rate Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FlashRateType__c</fullName>
        <label>Flash Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLAccount__c</fullName>
        <formula>LedgerEntry__r.GLAccount__r.Name</formula>
        <label>GL Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLCode__c</fullName>
        <formula>LedgerEntry__r.GLAccount__r.GLCode__c</formula>
        <label>GL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossPerPaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gross Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenueatSellout__c</fullName>
        <label>Gross Revenue at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HouseNut__c</fullName>
        <formula>LedgerEntry__r.HouseNut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House Nut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InHouseMax__c</fullName>
        <label>In House Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InHouseMin__c</fullName>
        <label>In House Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InHouseProjection__c</fullName>
        <label>In House Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InHouseRateType__c</fullName>
        <label>In House Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Truck</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InHouseRate__c</fullName>
        <label>In House Rate / $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InHouseatSellout__c</fullName>
        <label>In House at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsShadow__c</fullName>
        <formula>IF(LedgerEntry__r.RecordType.DeveloperName = &quot;Contra&quot;, True, False)</formula>
        <label>Is Shadow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LNTouringAmountRate__c</fullName>
        <label>LN Touring Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LNTouringAmount__c</fullName>
        <label>LN Touring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringMax__c</fullName>
        <label>LN Touring Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringMin__c</fullName>
        <label>LN Touring Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringRateType__c</fullName>
        <label>LN Touring Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LedgerEntry__c</fullName>
        <label>Ledger Entry</label>
        <referenceTo>LedgerEntry__c</referenceTo>
        <relationshipLabel>Ledger Entry Breakouts</relationshipLabel>
        <relationshipName>LedgerEntryBreakouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetPerPaid__c</fullName>
        <label>Net Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetRevenueatSellout__c</fullName>
        <label>Net Revenue at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferAtProjection__c</fullName>
        <label>Offer At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferAtSellout__c</fullName>
        <label>Offer At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferMax__c</fullName>
        <label>Offer Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferMin__c</fullName>
        <label>Offer Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferRateType__c</fullName>
        <label>Offer Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Truck</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferRate__c</fullName>
        <label>Offer Rate / $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalFlash__c</fullName>
        <label>Original Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParentRecordTypeID__c</fullName>
        <description>Internal field only used in Apex triggers</description>
        <formula>LedgerEntry__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanAmount__c</fullName>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectionAmount__c</fullName>
        <label>Projection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterAmountRate__c</fullName>
        <label>Promoter Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PromoterAmount__c</fullName>
        <label>Promoter Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterMax__c</fullName>
        <label>Promoter Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterMin__c</fullName>
        <label>Promoter Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterRateType__c</fullName>
        <label>Promoter Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateType__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponsibleifnotLNE__c</fullName>
        <label>Responsible if not LNE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedTicketScale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Ticket Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettleAtActual__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Settle At Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementExpenseVariance__c</fullName>
        <formula>OfferAtSellout__c -  Settlement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Expense Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementNotes__c</fullName>
        <label>Settlement Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New Breakouts in Settlement set this to true from the grid JS and further processing takes this flag into account to ignore these records on the Booking side.</description>
        <label>Settlement Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementRateType__c</fullName>
        <label>Settlement Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settlement__c</fullName>
        <label>Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TicketScaleList__c</fullName>
        <label>Ticket Scale List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VenueAmountRate__c</fullName>
        <label>Venue Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VenueAmount__c</fullName>
        <label>Venue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VenueMax__c</fullName>
        <label>Venue Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VenueMin__c</fullName>
        <label>Venue Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VenueRateType__c</fullName>
        <label>Venue Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rdPartyPercent__c</fullName>
        <label>3rd Party %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fxArtistAmount__c</fullName>
        <formula>(ArtistAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistMax__c</fullName>
        <formula>(ArtistMax__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistMin__c</fullName>
        <formula>(ArtistMin__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBaseAmount__c</fullName>
        <formula>(BaseAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Base Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCOGSAtSellout__c</fullName>
        <formula>(COGSAtSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>COGS At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCOGSatForecast__c</fullName>
        <formula>(COGSatForecast__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>COGS at Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxContraAmount__c</fullName>
        <formula>(ContraAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Contra Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxContraAtForecast__c</fullName>
        <formula>(ContraAtForecast__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Contra At Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxContraatSellout__c</fullName>
        <formula>(ContraatSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Contra at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCurrentFlashFormula__c</fullName>
        <formula>(CurrentFlashFormula__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Current Flash Formula (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCurrentFlash__c</fullName>
        <formula>(CurrentFlash__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Current Flash (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustment__c</fullName>
        <formula>(ExpenseAdjustment__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Expense Adjustment (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustmentatSellout__c</fullName>
        <formula>(ExpenseAdjustmentatSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Expense Adjustment at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxFlashAdjustments__c</fullName>
        <formula>(FlashAdjustments__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Flash Adjustments (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossPerPaid__c</fullName>
        <formula>(GrossPerPaid__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Per Paid (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossRevenue__c</fullName>
        <formula>(GrossRevenue__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossRevenueatSellout__c</fullName>
        <formula>(GrossRevenueatSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Revenue at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseMax__c</fullName>
        <formula>(InHouseMax__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseMin__c</fullName>
        <formula>(InHouseMin__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseProjection__c</fullName>
        <formula>(InHouseProjection__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseatSellout__c</fullName>
        <formula>(InHouseatSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNTouringAmount__c</fullName>
        <formula>(LNTouringAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LN Touring Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNTouringMax__c</fullName>
        <formula>(LNTouringMax__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LN Touring Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>